<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="change_to_en">Changing Language To English</string>
    <string name="change_to_ar">Changing Language To Arabic</string>
    <string name="check_the_weather">Check The Weather</string>
    <string name="alerts">Alerts</string>
    <string name="api_key" translatable="false">AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="fahrenhite">Fahrenhite</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">kelvin</string>
    <string name="temperature_unit">Unit</string>
    <string name="notifications">Notifications</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="location">Location</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="favourite_place">Favourite Place</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="save">Save</string>
    <string name="fromdate">From :</string>
    <string name="to_">To :</string>
    <string name="at_">At :</string>
    <string name="in_">In :</string>
    <string name="alert_txt">Notification</string>
    <string name="feels_like">Feels Like</string>
    <string name="no_alerts">There Is No Alerts</string>
    <string name="warning">Warning</string>
    <string name="at">At</string>
    <string name="remove">Remove</string>
    <string name="no_internet">There Is No Internet Connection</string>
    <string name="server_failed">The Server Failed To Connect</string>
    <string name="alarm">Alarm</string>
    <string name="okey">Okey</string>
    <string name="no">No </string>
    <string name="on_top">Display on top</string>
    <string name="map_saving">Do You want to save </string>
    <string name="on_fav">on favorites</string>
    <string name="on_alert">on Alerts</string>
    <string name="current_location">Current Location</string>
    <string name="do_you_want">Do You want to Make</string>
    <string name="your_current_location">your current Location</string>
    <string name="alarm_permission">Please Let Weather App Notifications Appear On Top</string>
    <string name="channel_name" translatable="false">"Weather App Notification "</string>
    <string name="channel_description" translatable="false">Alert Notification</string>
    <string name="if_empty" >Field Cannot Be Empty</string>
    <string name="start_date" >Start Date</string>
    <string name="end_date" > End Date </string>
    <string name="start_time" > Start Time </string>
    <string name="end_time" >End Time</string>
    <string name="place" >Location</string>
    <string name="check_date" >Start Date Cannot Be Bigger Than End Date</string>
    <string name="check_time" >Start time Cannot Be Bigger Than End Time</string>
</resources>