<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="20dp"
    android:id="@+id/cardView3"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardCornerRadius="50dp"
    android:layout_margin="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.75"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/purple_700"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/purple_700"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/from_date"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_corner"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:text="Mar 25 2023"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TextView
            android:background="@drawable/round_corner"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:id="@+id/to_date"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:text="Mar 25 2023"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.709"
            app:layout_constraintStart_toEndOf="@+id/from_date"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TextView
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/purple_700"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:id="@+id/hour"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:layout_width="100dp"
            android:text="@string/when"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_date" />

        <TextView
            android:background="@drawable/round_corner"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:id="@+id/when_time"
            android:layout_height="60dp"
            android:layout_width="150dp"
            android:text="10 : 30 "
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/hour" />

        <TextView
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/purple_700"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:id="@+id/place"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_width="100dp"
            android:text="@string/where"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/hour"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/hour"
            app:layout_constraintTop_toBottomOf="@+id/hour" />

        <TextView
            android:background="@drawable/round_corner"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:id="@+id/where_place"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:text="Ismailia"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/place"
            app:layout_constraintTop_toBottomOf="@+id/when_time" />

        <Button
            android:id="@+id/sava_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_corner"
            android:elevation="20dp"
            android:fontFamily="@font/b612_bold_italic"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/where_place"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toEndOf="@+id/place"
            app:layout_constraintTop_toBottomOf="@+id/place" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
